force-app/main/default/objects/STP_Criteria__c/STP_Criteria__c.object-meta.xml
<CustomObject>
    <label>STP Criteria</label>
    <nameField>
        <label>STP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STP Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>