force-app/main/default/objects/STP_Criteria__c/fields/All_3rd_Party_Vendor__c.field-meta.xml
<CustomField>
    <fullName>All_3rd_Party_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All 3P Parent &amp; Non-Parent Vendors</label>
    <type>Checkbox</type>
</CustomField>