force-app/main/default/objects/STP_Criteria__c/fields/All_WM_Vendors__c.field-meta.xml
<CustomField>
    <fullName>All_WM_Vendors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All WM Parent Vendors</label>
    <type>Checkbox</type>
</CustomField>