force-app/main/default/objects/STP_Criteria__c/fields/Applicable_Priority__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Priority__c</fullName>
    <label>Applicable Priority</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>