force-app/main/default/objects/STP_Criteria__c/fields/Child_VID_Check_Include_Uncheck_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Child_VID_Check_Include_Uncheck_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to Include, Uncheck to Exclude</description>
    <label>VID Check Include,Uncheck Exclude</label>
    <type>Checkbox</type>
</CustomField>