force-app/main/default/objects/STP_Criteria__c/fields/Child_VID_Listed__c.field-meta.xml
<CustomField>
    <fullName>Child_VID_Listed__c</fullName>
    <label>Child VID Listed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>