force-app/main/default/objects/STP_Criteria__c/fields/Customer_All__c.field-meta.xml
<CustomField>
    <fullName>Customer_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All And Not All</description>
    <label>All US Customers</label>
    <type>Checkbox</type>
</CustomField>