force-app/main/default/objects/STP_Criteria__c/fields/Customer_All_Canada__c.field-meta.xml
<CustomField>
    <fullName>Customer_All_Canada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All And Not All For Canada Clients</description>
    <label>All Canadian Customers</label>
    <type>Checkbox</type>
</CustomField>