force-app/main/default/objects/STP_Criteria__c/fields/Customer_Canada__c.field-meta.xml
<CustomField>
    <fullName>Customer_Canada__c</fullName>
    <inlineHelpText>List client 3-character codes, separated by commas, with no spaces between them.</inlineHelpText>
    <label>Canada Listed Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>