force-app/main/default/objects/STP_Criteria__c/fields/Customer_Included__c.field-meta.xml
<CustomField>
    <fullName>Customer_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Included and Excluded</description>
    <label>US Check to Include, Uncheck to Exclude</label>
    <type>Checkbox</type>
</CustomField>