force-app/main/default/objects/STP_Criteria__c/fields/Customer_Included_Canada__c.field-meta.xml
<CustomField>
    <fullName>Customer_Included_Canada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Included and Excluded for Canada Clients</description>
    <label>CA Check to Include, Uncheck to Exclude</label>
    <type>Checkbox</type>
</CustomField>