force-app/main/default/objects/STP_Criteria__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration for STP criteria. values as Temp, Perm</description>
    <label>Duration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration</valueSetName>
    </valueSet>
</CustomField>