force-app/main/default/objects/STP_Criteria__c/fields/Eligible_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Vendor__c</fullName>
    <label>Eligible Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>