force-app/main/default/objects/STP_Criteria__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Top</fullName>
            </value>
            <value>
                <fullName>Compactor</fullName>
            </value>
            <value>
                <fullName>Dumpster</fullName>
            </value>
            <value>
                <fullName>Toter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>