force-app/main/default/objects/STP_Criteria__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OC</fullName>
                <label>On-Call</label>
            </value>
            <value>
                <fullName>SOC</fullName>
                <label>Scheduled On-Call</label>
            </value>
            <value>
                <fullName>SCH</fullName>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>