force-app/main/default/objects/STP_Criteria__c/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <inlineHelpText>If Scode is one of the following (Franchised, City, Utility, CAM, Landlord) then the market is considered CLOSED.  Otherwise, the market is considered OPEN.</inlineHelpText>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>