force-app/main/default/objects/STP_Criteria__c/fields/MAS__c.field-meta.xml
<CustomField>
    <fullName>MAS__c</fullName>
    <label>WM Market Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K00185</fullName>
                <label>Capitol Area</label>
            </value>
            <value>
                <fullName>K00129</fullName>
                <label>Great Lakes Area</label>
            </value>
            <value>
                <fullName>K00117</fullName>
                <label>Heartland Area</label>
            </value>
            <value>
                <fullName>K00136</fullName>
                <label>Upper Midwest Area</label>
            </value>
            <value>
                <fullName>K00199</fullName>
                <label>WM of Canada</label>
            </value>
            <value>
                <fullName>K00114</fullName>
                <label>WM of Florida</label>
            </value>
            <value>
                <fullName>K00125</fullName>
                <label>WM of Four Corners</label>
            </value>
            <value>
                <fullName>K00152</fullName>
                <label>WM of Greater Mid Atlantic</label>
            </value>
            <value>
                <fullName>K00149</fullName>
                <label>WM of Gulf Coast</label>
            </value>
            <value>
                <fullName>K00181</fullName>
                <label>WM of Mid-South</label>
            </value>
            <value>
                <fullName>K00113</fullName>
                <label>WM of New England</label>
            </value>
            <value>
                <fullName>K00164</fullName>
                <label>WM of Northern California and Nevada</label>
            </value>
            <value>
                <fullName>K00133</fullName>
                <label>WM of Pacific Northwest BC</label>
            </value>
            <value>
                <fullName>K00126</fullName>
                <label>WM of South Atlantic</label>
            </value>
            <value>
                <fullName>K00175</fullName>
                <label>WM of Southern California</label>
            </value>
            <value>
                <fullName>K00139</fullName>
                <label>WM of Texas Oklahoma</label>
            </value>
            <value>
                <fullName>K00069</fullName>
                <isActive>false</isActive>
                <label>Consolidations</label>
            </value>
            <value>
                <fullName>K00033</fullName>
                <isActive>false</isActive>
                <label>Corporate Office</label>
            </value>
            <value>
                <fullName>K00232</fullName>
                <isActive>false</isActive>
                <label>Energy and Environmental Services</label>
            </value>
            <value>
                <fullName>K00070</fullName>
                <isActive>false</isActive>
                <label>Environmental Legacy Management Group</label>
            </value>
            <value>
                <fullName>K00087</fullName>
                <isActive>false</isActive>
                <label>Inactives</label>
            </value>
            <value>
                <fullName>K00226</fullName>
                <isActive>false</isActive>
                <label>Investments and Other Business</label>
            </value>
            <value>
                <fullName>K00089</fullName>
                <isActive>false</isActive>
                <label>Legal Entity</label>
            </value>
            <value>
                <fullName>K00244</fullName>
                <isActive>false</isActive>
                <label>Other Corporate</label>
            </value>
            <value>
                <fullName>K00215</fullName>
                <isActive>false</isActive>
                <label>Recycle America Services</label>
            </value>
            <value>
                <fullName>K00072</fullName>
                <isActive>false</isActive>
                <label>WM Renewable Energy</label>
            </value>
            <value>
                <fullName>K00236</fullName>
                <isActive>false</isActive>
                <label>WM SBS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>