force-app/main/default/objects/STP_Criteria__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>Construction / Demolition</fullName>
            </value>
            <value>
                <fullName>Food Waste</fullName>
            </value>
            <value>
                <fullName>Single Stream Recycling</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Bulk Material</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>