force-app/main/default/objects/STP_Criteria__c/fields/Parent_Non_Parent_VID_s__c.field-meta.xml
<CustomField>
    <fullName>Parent_Non_Parent_VID_s__c</fullName>
    <description>3rd Party Parent and Non Parent VID(s)</description>
    <label>3P Listed Parent &amp; Non-Parent Vendors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>