force-app/main/default/objects/STP_Criteria__c/fields/Parent_VID__c.field-meta.xml
<CustomField>
    <fullName>Parent_VID__c</fullName>
    <label>WM Listed Parent VID(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>