force-app/main/default/objects/STP_Criteria__c/fields/STP_Type__c.field-meta.xml
<CustomField>
    <fullName>STP_Type__c</fullName>
    <label>STP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full STP</fullName>
            </value>
            <value>
                <fullName>Partial STP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>