force-app/main/default/objects/STP_Criteria__c/fields/WM_Vendor__c.field-meta.xml
<CustomField>
    <fullName>WM_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WM Vendor Check Include,Uncheck Exclude</label>
    <type>Checkbox</type>
</CustomField>