force-app/main/default/objects/STP_Criteria__c/fields/Zero_Cost_Price_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Zero_Cost_Price_Allowed__c</fullName>
    <label>Zero Cost/Price Allowed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Container Service Charge</fullName>
            </value>
            <value>
                <fullName>Disposal</fullName>
                <isActive>false</isActive>
                <label>Disposal</label>
            </value>
            <value>
                <fullName>Extra Pickup</fullName>
                <isActive>false</isActive>
                <label>Extra Pickup</label>
            </value>
            <value>
                <fullName>Haul</fullName>
                <isActive>false</isActive>
                <label>Haul</label>
            </value>
            <value>
                <fullName>Pickup</fullName>
                <isActive>false</isActive>
                <label>Pickup</label>
            </value>
            <value>
                <fullName>Relocation</fullName>
                <isActive>false</isActive>
                <label>Relocation</label>
            </value>
            <value>
                <fullName>Removal</fullName>
                <isActive>false</isActive>
                <label>Removal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>