force-app/main/default/objects/STP_Criteria__c/recordTypes/Client_Pricing_Exemption.recordType-meta.xml
<RecordType>
    <fullName>Client_Pricing_Exemption</fullName>
    <active>true</active>
    <label>Client Pricing Exemption</label>
</RecordType>