force-app/main/default/objects/STP_Criteria__c/recordTypes/STP_Eligibility.recordType-meta.xml
<RecordType>
    <fullName>STP_Eligibility</fullName>
    <active>true</active>
    <label>STP Eligibility</label>
</RecordType>