force-app/main/default/objects/STP_Criteria__c/validationRules/Canada_Customer_not_null_and_All_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Canada_Customer_not_null_and_All_checked</fullName>
    <active>true</active>
    <description>Canada Customer should not be blank in case All is Unchecked</description>
    <errorConditionFormula>AND( Customer_All_Canada__c  = true,  Customer_Canada__c  != null,  RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>If All Canadian Customers is checked, then Canada Listed Customers must be blank.</errorMessage>
</ValidationRule>