force-app/main/default/objects/STP_Criteria__c/validationRules/Canada_Customer_Not_Null_When_All_False.validationRule-meta.xml
<ValidationRule>
    <fullName>Canada_Customer_Not_Null_When_All_False</fullName>
    <active>true</active>
    <description>Canada Customer should not be blank in case All is Unchecked</description>
    <errorConditionFormula>AND( Customer_All_Canada__c  = false,  Customer_Canada__c  = null,  RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>If &quot;All Canadian Customers&quot; is unchecked, then Listed Customer(s) must be provided.</errorMessage>
</ValidationRule>