force-app/main/default/objects/STP_Criteria__c/validationRules/Customer_Not_Null_When_All_is_False.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Not_Null_When_All_is_False</fullName>
    <active>true</active>
    <description>Customer should not be blank in case All is Unchecked</description>
    <errorConditionFormula>AND( Customer_All__c  = false,  Customer__c  = null,  RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>If &quot;All US Customers&quot; is unchecked, then Listed Customer(s) must be provided.</errorMessage>
</ValidationRule>