force-app/main/default/objects/STP_Criteria__c/validationRules/Customer_Null_When_All_is_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Null_When_All_is_True</fullName>
    <active>true</active>
    <description>Customer should not be blank in case All is Unchecked</description>
    <errorConditionFormula>AND( Customer_All__c  = true,  Customer__c  != null,  RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>If All US Customers is checked, then US Listed Customers must be blank.</errorMessage>
</ValidationRule>