force-app/main/default/objects/STP_Criteria__c/validationRules/Exclude_All_Vendor_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclude_All_Vendor_Validation</fullName>
    <active>true</active>
    <description>Prevent Records From Having to Exclude All Vendors</description>
    <errorConditionFormula>AND(All_WM_Vendors__c  = true,  WM_Vendor__c= false, All_3rd_Party_Vendor__c = true, Child_VID_Check_Include_Uncheck_Exclude__c = false, RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>All WM and 3rd Party vendors cannot be excluded.</errorMessage>
</ValidationRule>