force-app/main/default/objects/STP_Criteria__c/validationRules/Exclude_Canada_All_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclude_Canada_All_Validation</fullName>
    <active>false</active>
    <description>Prevent Canadian Records From Having to Exclude All Customers</description>
    <errorConditionFormula>AND(Customer_All_Canada__c  = true,  Customer_Included_Canada__c  = false, RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>When excluding Canadian customers, only listed customers, not all customers, can be selected.</errorMessage>
</ValidationRule>