force-app/main/default/objects/STP_Criteria__c/validationRules/Market_area_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Market_area_is_required</fullName>
    <active>true</active>
    <description>When selecting WM vendors market area is required.</description>
    <errorConditionFormula>AND(
OR( 
AND((WM_Vendor__c),(All_WM_Vendors__c) , ISBLANK( Parent_VID__c)), 
AND(NOT((All_WM_Vendors__c)) , NOT(ISBLANK( Parent_VID__c )))
),
 (ISNULL( MAS__c ))
)</errorConditionFormula>
    <errorMessage>Please select market area.</errorMessage>
</ValidationRule>