force-app/main/default/objects/STP_Criteria__c/validationRules/ParentVendor_Not_Null_When_All_is_False.validationRule-meta.xml
<ValidationRule>
    <fullName>ParentVendor_Not_Null_When_All_is_False</fullName>
    <active>true</active>
    <description>Parent Vendor should not be blank in case All WM Parent Vendors is Unchecked</description>
    <errorConditionFormula>AND( All_WM_Vendors__c  = false,  Parent_VID__c  = null,  RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>If &quot;All WM Parent Vendors&quot; is unchecked, then Listed WM Parent VID(s) must be provided.</errorMessage>
</ValidationRule>