force-app/main/default/objects/STP_Criteria__c/validationRules/Vendor3P_Not_Null_When_All_False.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor3P_Not_Null_When_All_False</fullName>
    <active>true</active>
    <description>Third Party Vendor should not be blank in case All is Unchecked</description>
    <errorConditionFormula>AND(All_3rd_Party_Vendor__c = false,  Parent_Non_Parent_VID_s__c = null,  RecordType.Name = &apos;STP Eligibility&apos;)</errorConditionFormula>
    <errorMessage>If &quot;All 3P Parent &amp; Non-Parent Vendors&quot; is unchecked, then Listed 3P Listed Parent &amp; Non-Parent Vendors must be provided.</errorMessage>
</ValidationRule>