force-app/main/default/objects/STP_Criteria__c/validationRules/WM_Market_Area_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>WM_Market_Area_Selection</fullName>
    <active>true</active>
    <description>WM Market Area must be selected when WM Vendor is selected</description>
    <errorConditionFormula>AND( RecordType.Name = &apos;STP Eligibility&apos;,
 NOT(ISNULL(MAS__c)) , WM_Vendor__c = false,  All_WM_Vendors__c  = true,  Parent_VID__c  = null )</errorConditionFormula>
    <errorMessage>WM Market Area cannot be selected without selecting WM Vendor</errorMessage>
</ValidationRule>