force-app/main/default/objects/STP_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Service_Type__c</columns>
    <columns>Equipment__c</columns>
    <columns>Duration__c</columns>
    <columns>Frequency__c</columns>
    <columns>Material__c</columns>
    <columns>Customer_Included__c</columns>
    <columns>Customer_All__c</columns>
    <columns>Customer_Included_Canada__c</columns>
    <columns>Customer_All_Canada__c</columns>
    <columns>Parent_Account__c</columns>
    <columns>Zero_Cost_Price_Allowed__c</columns>
    <columns>Market_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>