force-app/main/default/objects/STP_Criteria__c/listViews/Client_Pricing_Exemption.listView-meta.xml
<ListView>
    <fullName>Client_Pricing_Exemption</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>Zero_Cost_Price_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>STP_Criteria__c.Client_Pricing_Exemption</value>
    </filters>
    <label>Client Pricing Exemption</label>
</ListView>