force-app/main/default/objects/STP_Criteria__c/listViews/Partial_STP.listView-meta.xml
<ListView>
    <fullName>Partial_STP</fullName>
    <columns>NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>Equipment__c</columns>
    <columns>Material__c</columns>
    <columns>Frequency__c</columns>
    <columns>Duration__c</columns>
    <columns>Market_Type__c</columns>
    <columns>Customer_All_Canada__c</columns>
    <columns>Customer_All__c</columns>
    <columns>All_3rd_Party_Vendor__c</columns>
    <columns>All_WM_Vendors__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>STP_Type__c</field>
        <operation>equals</operation>
        <value>Partial STP</value>
    </filters>
    <label>Partial STP</label>
</ListView>