force-app/main/default/objects/STP_Criteria__c/listViews/STP_Eligibility.listView-meta.xml
<ListView>
    <fullName>STP_Eligibility</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>STP_Type__c</columns>
    <columns>Market_Type__c</columns>
    <columns>Duration__c</columns>
    <columns>Equipment__c</columns>
    <columns>Material__c</columns>
    <columns>Customer_Included__c</columns>
    <columns>Customer_All__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_Included_Canada__c</columns>
    <columns>Customer_All_Canada__c</columns>
    <columns>Customer_Canada__c</columns>
    <columns>Parent_VID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>STP_Criteria__c.STP_Eligibility</value>
    </filters>
    <label>STP Eligibility</label>
</ListView>